--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,6 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> Itialian: Chao, amici! </li>
+  <li> Japanese:  Sayonara, tomodachi! </li>
 </ul>
